--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+cdk.out
+.idea
+cdk.json
+cdk.context.json
