--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>com.myorg.LambdaApp</mainClass>
+                    <mainClass>com.aws.sample.lambda.LambdaApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
